@@ -1,8 +1,8 @@
 Package: gCMAP
 Type: Package
 Title: Tools for Connectivity Map-like analyses
-Version: 1.1.4
-Date: 2012-12-19
+Version: 1.1.5
+Date: 2013-01-30
 Depends: methods, GSEABase, DESeq
 Imports: Biobase, limma (>= 3.12.1), GSEAlm, Category, bigmemoryExtras (>=
         0.99.3), Matrix (>= 1.0.9), parallel, annotate, genefilter, 
